# ctf-maze-arena

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
benches/: maze_gen.rs  placeholder.rs  solvers.rs
docs/: ALGORITHMS.md  API.md  deployment-runbook.md  e2e-runbook.md  observability-runbook.md  phase-12-14-verification.md
migrations/: 001_init.sql  002_leaderboard_submissions.sql
scripts/: verify-phase12-14.ps1
src/: lib.rs  main.rs
src/api/: mod.rs
src/maze/: gen.rs  mod.rs  validate.rs
src/replay/: mod.rs
src/solve/: astar.rs  bfs.rs  dfs.rs  dp.rs  mod.rs  tests.rs
src/store/: mod.rs
web/: Dockerfile  auth.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/token/: route.ts
web/app/replay/[runId]/: page.tsx
web/components/: Achievements.tsx  GenerateForm.tsx  Leaderboard.tsx  MazeGrid.tsx  SolverPicker.tsx
web/hooks/: useSolveStream.ts
web/lib/: achievements.ts  api.ts  maze.ts  ws.ts
web/tests/e2e/: auth-token.spec.ts  generate-grid.spec.ts  solve-stream.spec.ts
