[package]
name = "ctf-maze-arena"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "set-header"] }
chrono = { version = "0.4", features = ["serde"] }
tower_governor = "0.8.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "maze_gen"
harness = false

[[bench]]
name = "solvers"
harness = false
